# patrol_swarm

./: README.md
TopologyMapCreator/include/: initly.h
TopologyMapCreator/src/: TopologyMapNode.cpp
simulate/: CMakeLists.txt  manualPatrolArea.cpp  package.xml
simulate/launch/: empty_world.launch.py  empty_world_swarm.launch.py
simulate/src/: manualArea.cpp
simulate/world/: empty.world
topology_map_creator/: CMakeLists.txt  package.xml  readme.md
topology_map_creator/include/: utils.h
topology_map_creator/launch/: run.launch.py  run.rviz  start.launch.py
topology_map_creator/msg/: Area2D.msg  Matrix.msg  Obstacle.msg
topology_map_creator/src/: TopologyMapNode.cpp
