<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>simulate</name>
  <version>0.0.0</version>
  <description>simulate</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
